test/functional/Sema/multiple_functions_error.glu
//
// RUN: not gluc -c %s -o %t.o 2>&1 | FileCheck -v %s
//

// CHECK: 6:1: error: duplicate function declaration: toto
func toto() {
    return;
}

// CHECK-NOT: error:
func toto(a: Int, argv: **Char) -> Int {
    return a;
}

//CHECK: 16:1: error: duplicate function declaration: toto
func toto() {}
